--- a/templates/index.html
+++ b/templates/index.html
@@ -86,7 +86,7 @@
       <div class="form-wrapper py-5">
         <form action="/" class="dropzone" id="my-dropzone" method="POST">
           <div class="form-group">
-            <button type="submit">Submit</button>
+            <button type="submit" class="btn btn-outline-secondary">Submit</button>
           </div>
           <div class="form-group">
             <input type="hidden" name="session_id" id="session_id" class="form-control" required/>
@@ -95,5 +95,4 @@
         </form>
       </div>
     </section>
-    <p>lorem ipsum</p>
 {% endblock %}
